--- a/部署方案.md
+++ b/部署方案.md
@@ -599,7 +599,7 @@ curl -I https://www.ieclub.online
 {
   "miniprogramRoot": "dist/",
   "projectname": "ieclub-taro",
-  "appid": "wx1234567890abcdef",  // 替换为你的真实 AppID
+  "appid": "your_actual_appid_here",  // 替换为你的真实 AppID
   "compileType": "miniprogram"
 }
 ```
