--- a/部署修复说明.md
+++ b/部署修复说明.md
@@ -26,26 +26,34 @@ Taro H5 构建默认输出到 `dist/` 根目录，但服务器端的 `deploy-mas
 # 旧版本（直接打包 dist 目录）
 Compress-Archive -Path "$FrontendDir\dist" -DestinationPath "$FrontendDir\dist.zip" -Force
 
-# 新版本（创建 h5 子目录后再打包）
-$TempDistPath = "$FrontendDir\temp_dist"
-$H5Path = "$TempDistPath\h5"
+# 最终版本（创建 dist/h5/ 结构后再打包）
+$TempPackPath = "$FrontendDir\temp_pack"
+$DistPath = "$TempPackPath\dist"
+$H5Path = "$DistPath\h5"
 
-# 创建 temp_dist/h5/ 结构
+# 创建 temp_pack/dist/h5/ 结构
 New-Item -Path $H5Path -ItemType Directory -Force | Out-Null
 
-# 复制构建产物到 h5 子目录
+# 复制构建产物到 dist/h5/ 子目录
 Copy-Item -Path "$FrontendDir\dist\*" -Destination $H5Path -Recurse -Force
 
-# 打包 h5 目录
-Compress-Archive -Path "$H5Path" -DestinationPath "$FrontendDir\dist.zip" -Force
+# 切换到临时目录并打包 dist 目录
+Set-Location -Path $TempPackPath
+Compress-Archive -Path "dist" -DestinationPath "$FrontendDir\dist.zip" -Force
+Set-Location -Path $FrontendDir
 
 # 清理临时目录
-Remove-Item -Path $TempDistPath -Recurse -Force
+Remove-Item -Path $TempPackPath -Recurse -Force
 ```
+
+**关键点：**
+- 服务器在 `/tmp` 目录执行 `unzip -o dist.zip`
+- 服务器期望解压后得到 `/tmp/dist/h5/` 结构
+- 因此压缩包内必须是 `dist/h5/` 而不是 `h5/`
 
 ### 打包结构对比
 
-**修复前：**
+**修复前（错误）：**
 ```
 dist.zip
 ├── js/
@@ -53,7 +61,7 @@ dist.zip
 └── index.html
 ```
 
-**修复后：**
+**第一次修复（仍然错误）：**
 ```
 dist.zip
 └── h5/
@@ -61,6 +69,18 @@ dist.zip
     ├── css/
     └── index.html
 ```
+解压后得到 `/tmp/h5/`，但服务器期望 `/tmp/dist/h5/`
+
+**最终修复（正确）：**
+```
+dist.zip
+└── dist/
+    └── h5/
+        ├── js/
+        ├── css/
+        └── index.html
+```
+解压后得到 `/tmp/dist/h5/`，符合服务器期望
 
 ## 使用方法
 
@@ -148,4 +168,5 @@ location / {
 - **日期**: 2025-10-26
 - **版本**: deploy-local.ps1 v1.1
 - **状态**: ✅ 已修复并测试
+
 
