feat: 实现参与的活动功能（三端同步）
- 后端：修复activities路由顺序，确保/me/activities正确匹配
- 小程序端：新增my-activities页面，支持Tab切换（我参加的/我组织的）
- 网页端：新增MyActivities组件，响应式设计
- 功能完整：活动列表、状态标签、参与状态、骨架屏、空状态
- UI设计：橙黄色渐变主题，大图卡片布局
- 更新文档：AI_HANDOVER.md记录开发详情

--- a/合作开发指南.ipynb
+++ b/合作开发指南.ipynb
@@ -94,6 +94,265 @@
     "\n",
     "好的，第一部分我们已经理解了核心的“分支”思想，并做好了所有的准备工作。我们的“正式版魔法书”已经安稳地放在了每个人的书架上。\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16058b66",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "### **Git 专业协作指南 (第二部分)：日常开发实-战演练**\n",
+    "\n",
+    "我们将模拟一个完整的开发流程：从接到一个新任务，到最终代码被合并进主干。\n",
+    "\n",
+    "#### **场景：你要开发“用户个人主页”功能**\n",
+    "\n",
+    "这是你的第一个任务。让我们开始吧！\n",
+    "\n",
+    "#### **第一步：[开始新任务前] 确保你的 `main` 分支是最新版本**\n",
+    "\n",
+    "每天早上，或者每次开始一个新功能前，都要做的第一件事，就是同步“正式版的魔法书”。这能确保你的“草稿”是从最新、最干净的版本上复制出来的。\n",
+    "\n",
+    "1.  **切换到 `main` 分支**\n",
+    "    ```bash\n",
+    "    git checkout main\n",
+    "    ```\n",
+    "    > `checkout` 是 Git 中用于“切换”的命令。\n",
+    "\n",
+    "2.  **拉取远程 `main` 分支的最新更新**\n",
+    "    ```bash\n",
+    "    git pull origin main\n",
+    "    ```\n",
+    "    > `pull` 的意思是“拉取”。`origin` 是我们给远程仓库起的默认别名。所以这行命令的意思是：“从 `origin` (GitHub) 上，把 `main` 分支的最新内容拉到我本地的 `main` 分支里。”\n",
+    "    >\n",
+    "    > 如果终端显示 `Already up to date.`，说明你的本地 `main` 分支已经是最新了，这很好！\n",
+    "\n",
+    "#### **第二步：为你的新功能创建一个专属分支**\n",
+    "\n",
+    "现在，从这个最新的 `main` 分支上，为你的“个人主页”功能创建一个新的“草稿”。\n",
+    "\n",
+    "1.  **创建并立即切换到新分支**\n",
+    "    ```bash\n",
+    "    git checkout -b feature/profile-page\n",
+    "    ```\n",
+    "    > **命令解析**:\n",
+    "    > *   `git checkout -b ...` 是一个组合命令，它等于 `git branch feature/profile-page` (创建一个新分支) + `git checkout feature/profile-page` (立即切换到这个新分支)。\n",
+    "    > *   **分支命名规范**：这是一个非常重要的专业习惯！\n",
+    "    >     *   `feature/...`: 用于开发新功能。 (e.g., `feature/user-login`, `feature/post-creation`)\n",
+    "    >     *   `fix/...`: 用于修复 Bug。 (e.g., `fix/login-button-color`, `fix/navbar-layout-issue`)\n",
+    "    >     *   `docs/...`: 用于修改文档。\n",
+    "    >     *   使用 `-` (短横线) 而不是 `_` (下划线) 或空格。\n",
+    "    >\n",
+    "    > 现在，你的终端提示符应该会显示你正处于 `feature/profile-page` 分支上。你现在可以安全地开始写代码了！\n",
+    "\n",
+    "#### **第三步：[开发过程中] 编写代码并频繁“存盘”(Commit)**\n",
+    "\n",
+    "现在，你可以在你的新分支上大展拳脚了。修改 `ProfilePage.jsx`，添加新组件，等等。\n",
+    "\n",
+    "在你完成了一个小功能点，或者工作了一段时间后，你应该创建一个“**本地存档**”，也就是 `commit`。**不要等到所有功能都写完才 commit！** 好的习惯是**少量、多次**地 commit。\n",
+    "\n",
+    "1.  **检查文件状态**\n",
+    "    在你准备 commit 之前，可以先用这个命令看看你都修改了哪些文件：\n",
+    "    ```bash\n",
+    "    git status\n",
+    "    ```\n",
+    "    > 这会用红色列出所有“已修改但未暂存”的文件。\n",
+    "\n",
+    "2.  **“打包”你要存盘的文件 (Stage)**\n",
+    "    `git add` 命令就像是把你要存盘的文件放进一个“待存盘的包裹”里。\n",
+    "\n",
+    "    *   如果你想把**所有**修改过的文件都打包：\n",
+    "        ```bash\n",
+    "        git add .\n",
+    "        ```\n",
+    "    *   如果你只想打包**某个特定**的文件：\n",
+    "        ```bash\n",
+    "        git add src/pages/profile/ProfilePage.jsx\n",
+    "        ```\n",
+    "\n",
+    "3.  **“贴标签”并正式存盘 (Commit)**\n",
+    "    `git commit` 就是正式的“存盘”操作。`-m` 参数后面跟着的是本次存盘的**说明**，这是**极其重要**的！\n",
+    "\n",
+    "    ```bash\n",
+    "    git commit -m \"feat(profile): Create basic layout for profile page\"\n",
+    "    ```\n",
+    "    > **Commit Message 规范 (约定式提交)**：\n",
+    "    > 这也是一个重要的专业习惯。一个好的 commit message 应该像这样：`类型(范围): 简短描述`\n",
+    "    > *   **类型**: `feat` (新功能), `fix` (修复bug), `docs` (文档), `style` (格式), `refactor` (重构), `test` (测试), `chore` (构建或工具变动)。\n",
+    "    > *   **(范围)**: 可选，指明这次修改影响的范围 (e.g., `profile`, `login`, `navbar`)。\n",
+    "    > *   **简短描述**: 清晰地描述你这次存盘做了什么。\n",
+    "\n",
+    "    现在，你刚刚做的修改就已经被安全地记录在了你的本地 `feature/profile-page` 分支的历史里了。你可以继续写代码，然后重复 `add` -> `commit` 的流程。\n",
+    "\n",
+    "#### **第四步：[开发了几天后] 与 `main` 分支保持同步 (Rebase)**\n",
+    "\n",
+    "在你开发个人主页的这几天里，你的队友张三可能已经完成了登录功能，并且他的代码已经被合并进了 `main` 分支。\n",
+    "\n",
+    "这意味着，你本地的 `feature/profile-page` 分支是基于一个**旧的 `main` 分支**创建的。为了避免最后合并时出现巨大的冲突，你应该定期把 `main` 分支上的最新改动“吸收”到你的分支里。\n",
+    "\n",
+    "我们使用 `rebase` (变基) 这个高级但非常干净的命令来做这件事。\n",
+    "\n",
+    "1.  **首先，确保你的 `main` 分支是最新**\n",
+    "    ```bash\n",
+    "    git checkout main\n",
+    "    git pull origin main\n",
+    "    ```\n",
+    "\n",
+    "2.  **然后，切换回你的功能分支**\n",
+    "    ```bash\n",
+    "    git checkout feature/profile-page\n",
+    "    ```\n",
+    "\n",
+    "3.  **执行 `rebase` 操作**\n",
+    "    ```bash\n",
+    "    git rebase main\n",
+    "    ```\n",
+    "    > **命令解析**：\n",
+    "    > 这句命令的意思是：“请把我的 `feature/profile-page` 分支上，从 `main` 分支分叉出去之后的所有 commit，都**重新在最新版的 `main` 分支的顶端再播放一遍**。”\n",
+    "    >\n",
+    "    > **`rebase` 的好处**：它会让你的分支历史看起来非常**线性、干净**，就像是你从一开始就是基于最新的 `main` 分支进行开发的一样。这会让最终的合并变得非常简单。\n",
+    "    >\n",
+    "    > **处理冲突**：在 `rebase` 过程中，如果 Git 发现 `main` 上的新代码和你写的代码修改了同一个地方，它就会暂停，并提示你**“冲突 (Conflict)”**。下一部分我们会专门讲如何解决冲突。\n",
+    "\n",
+    "---\n",
+    "\n",
+    "好的，第二部分我们学习了从开始任务到开发过程中的所有核心命令。你现在已经知道如何创建分支、保存进度，以及如何与主干保持同步了。\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db8df720",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### **Git 专业协作指南 (第三部分)：完成功能与代码审查**\n",
+    "\n",
+    "#### **第五步：[功能完成后] 推送你的分支到远程仓库**\n",
+    "\n",
+    "到目前为止，你的 `feature/profile-page` 分支和上面所有的 commit 都只存在于**你自己的电脑**上。你需要把它推送到 GitHub，这样你的队友才能看到你的代码，并进行代码审查。\n",
+    "\n",
+    "1.  **最后一次与 `main` 同步 (推荐)**\n",
+    "    在推送前，最好再做一次 `rebase`，确保你的分支是基于最新版的 `main`。\n",
+    "    ```bash\n",
+    "    # (确保 main 是最新的)\n",
+    "    git checkout main\n",
+    "    git pull origin main\n",
+    "\n",
+    "    # (回到你的分支并 rebase)\n",
+    "    git checkout feature/profile-page\n",
+    "    git rebase main\n",
+    "    ```\n",
+    "    > 如果在 `rebase` 过程中遇到冲突，请参考下面的“**如何解决冲突**”部分。\n",
+    "\n",
+    "2.  **推送你的分支**\n",
+    "    这是第一次推送这个新分支，你需要用 `-u` 参数来建立本地分支和远程分支的连接。\n",
+    "    ```bash\n",
+    "    git push -u origin feature/profile-page\n",
+    "    ```\n",
+    "    > **命令解析**：\n",
+    "    > *   `push`: 推送。\n",
+    "    > *   `origin`: 远程仓库的别名 (GitHub)。\n",
+    "    > *   `feature/profile-page`: 你要推送的分支名。\n",
+    "    > *   `-u` (或 `--set-upstream`): 建立“追踪”关系。这样设置一次之后，未来你在这个分支上再 `git push`，就不需要指定 `origin` 和分支名了。\n",
+    "\n",
+    "    执行成功后，你的分支就已经安全地上传到 GitHub 了。\n",
+    "\n",
+    "#### **第六步：[在 GitHub 上] 创建合并请求 (Pull Request)**\n",
+    "\n",
+    "现在，你需要去 GitHub 网站，正式提出你的“合并申请”。\n",
+    "\n",
+    "1.  打开你的 GitHub 项目主页。\n",
+    "2.  你应该会看到一个黄色的提示条，上面写着 “**feature/profile-page had recent pushes**”，旁边有一个绿色的 **“Compare & pull request”** 按钮。**点击它！**\n",
+    "    > 如果没有看到提示条，也可以去 “Pull requests” 标签页，点击 “New pull request” 按钮。在 `compare` 分支里选择你的 `feature/profile-page` 分支。\n",
+    "\n",
+    "3.  **填写 PR 表单**：\n",
+    "    *   **标题 (Title)**：默认会是你的最后一个 commit message。你可以修改它，让它更清晰地概括你的整个功能。例如：“**feat(profile): Add user profile page with stats and projects**”。\n",
+    "    *   **描述 (Description)**：**这是最重要的部分！** 在这里，你应该：\n",
+    "        *   清晰地描述你**做了什么**。\n",
+    "        *   解释你**为什么**这么做。\n",
+    "        *   如果修复了一个 Bug，要说明 Bug 的复现步骤。\n",
+    "        *   **附上截图或录屏**来展示你的新功能UI，这能极大地帮助审查者理解你的工作。\n",
+    "        *   使用 `@` 符号来 **@ 你的队友或负责人**，邀请他们来审查你的代码 (e.g., `@zhangsan please review`)。\n",
+    "\n",
+    "4.  **创建 PR**：\n",
+    "    填写完毕后，点击 **“Create pull request”** 按钮。\n",
+    "\n",
+    "恭喜你！你已经成功地提交了你的第一个 PR。现在球踢到了你的队友那边。\n",
+    "\n",
+    "#### **第七步：[协作] 代码审查与讨论**\n",
+    "\n",
+    "这是团队合作保证代码质量的核心环节。\n",
+    "\n",
+    "1.  **审查与评论**：你的队友会查看你 PR 中的“Files changed”标签页，逐行阅读你的代码。如果他们发现问题、有更好的建议，或者只是想问个问题，他们会直接在那行代码上留下评论。\n",
+    "2.  **接收反馈**：你会收到 GitHub 的邮件或站内通知。\n",
+    "3.  **修改代码**：根据队友的反馈，你在**本地的 `feature/profile-page` 分支**上进行修改。\n",
+    "4.  **再次提交**：修改完成后，像之前一样 `git add .` -> `git commit -m \"fix: Address review comments\"`。\n",
+    "5.  **再次推送**：**这次，你只需要简单地运行 `git push`**。因为之前已经用 `-u` 设置了追踪关系，Git 知道你要推送到哪里。\n",
+    "    ```bash\n",
+    "    git push\n",
+    "    ```\n",
+    "    你新推送的 commit 会自动出现在同一个 PR 里。\n",
+    "6.  **循环**：重复这个“讨论-修改-推送”的循环，直到所有人都对代码满意，并且 PR 页面上出现了 **“Approve” (批准)** 的标记。\n",
+    "\n",
+    "#### **第八步：[由负责人] 合并与清理**\n",
+    "\n",
+    "1.  **合并 (Merge)**：当 PR 被批准后，通常由团队负责人或拥有 `main` 分支写权限的人，来点击那个绿色的 **“Merge pull request”** 按钮。\n",
+    "    > **合并策略**：通常会选择 **“Squash and merge”** (压缩合并)。这个选项会把你在这个分支上的所有小 commit（比如 “fix typo”, “update style” 等）合并成一个干净的、有意义的大 commit，然后再合并到 `main` 分支。这能让 `main` 分支的历史记录非常整洁。\n",
+    "\n",
+    "2.  **删除分支**：合并成功后，GitHub 会提示你删除这个已经完成使命的远程分支。点击 **“Delete branch”** 按钮。同时，你也可以删除你本地的副本：\n",
+    "    ```bash\n",
+    "    # 先回到 main 分支\n",
+    "    git checkout main\n",
+    "\n",
+    "    # 删除本地的 feature/profile-page 分支\n",
+    "    git branch -d feature/profile-page\n",
+    "    ```\n",
+    "\n",
+    "**至此，一个完整的功能开发与协作流程就结束了！你的代码已经安全地成为了正式版的一部分！**\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **附录：如何解决冲突 (Conflict)**\n",
+    "\n",
+    "冲突并不可怕，它只是 Git 在 `rebase` 或 `merge` 时，发现有两个人修改了**同一个文件的同一行代码**，它不知道该听谁的，于是向你“求助”。\n",
+    "\n",
+    "当你运行 `git rebase main` 并看到 `CONFLICT` 提示时：\n",
+    "\n",
+    "1.  **找到冲突文件**：运行 `git status`，Git 会告诉你哪个文件出现了冲突。\n",
+    "2.  **打开冲突文件**：在 VS Code 中打开那个文件，你会看到类似这样的标记：\n",
+    "    ```\n",
+    "    <<<<<<< HEAD\n",
+    "    // 这是你写的代码\n",
+    "    const title = \"我的个人主页\";\n",
+    "    =======\n",
+    "    // 这是从 main 分支上同步过来的、你的队友写的代码\n",
+    "    const title = \"用户个人中心\";\n",
+    "    >>>>>>> main\n",
+    "    ```\n",
+    "\n",
+    "3.  **做出决定**：你需要**手动编辑**这段代码，决定最终要保留哪个版本，或者结合两者创造一个新的版本。你需要把 `<<<<<<<`, `=======`, `>>>>>>>` 这些标记**全部删除**。\n",
+    "    *   例如，你和队友商量后，决定使用“用户个人中心”，那么你就把代码改成：\n",
+    "        ```\n",
+    "        const title = \"用户个人中心\";\n",
+    "        ```\n",
+    "\n",
+    "4.  **标记为已解决**：修改完所有冲突并保存文件后，告诉 Git 你已经处理好了。\n",
+    "    ```bash\n",
+    "    git add [你修改过的那个文件名]\n",
+    "    ```\n",
+    "\n",
+    "5.  **继续 `rebase` 流程**：\n",
+    "    ```bash\n",
+    "    git rebase --continue\n",
+    "    ```\n",
+    "    Git 会继续处理下一个 commit。重复这个过程，直到 `rebase` 成功完成。\n",
+    "\n",
+    "---\n",
+    "\n",
+    "这份三部分的指南涵盖了从理念到实战的整个专业 Git 协作流程。请在实际工作中反复练习，它将成为你最重要的开发技能之一！"
+   ]
   }
  ],
  "metadata": {
